<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#283593"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:text="@string/sign_up"
        android:textColor="#e8eaf6"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        android:text="@string/who_are_you"
        android:textStyle="bold"
        android:textColor="#7986cb"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffff00"
            android:src="@drawable/ic_man"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/parent"/>

        <ImageButton
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff9100"
            android:src="@drawable/ic_boy"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/child"/>

        <ImageButton
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#69f0ae"
            android:src="@drawable/ic_man_1"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/teacher"/>

    </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:inputType="text"
            android:drawableStart="@drawable/ic_avatar"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_mail"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_locked"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:drawableStart="@drawable/ic_locked"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPanel"
            android:background="@drawable/rounded_button"
            android:text="@string/signup"
            android:textColor="#fff3e0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/text"
            android:text="@string/already_have_an_account"
            android:textStyle="italic"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="40dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/text"
            android:text="@string/login_here"
            android:textColor="#ff9800"
            android:textStyle="italic"
            android:layout_marginTop="40dp"/>

    </LinearLayout>


</LinearLayout>
